--- a/index.html
+++ b/index.html
@@ -16,14 +16,20 @@
         <p>For as long as humans have built things, weâve wrestled with the implications of what weâve built. In many cases, these philosophical and ethical wrestlings have made for great dramaâthink Frankenstein, or 2001: A Space Odyssey. Often, the hypothetical scenarios we envision come remarkably close to true, and the discoveries weâve made in the fields of Artificial Intelligence and Machine Learning make clear that a âcomputer with a mind of its ownâ is <s>going to take over the world</s> not such a fantastic thing to imagine any longer.
         </p>
       <h2><strong>The Triumph Of Deep Blue</strong></h2>
-        <p>Perhaps this is why we are so captivated by human vs. machine competitions, because the idea of being overcome by that which weâve created speaks to something very deep within our collective consciousness. When IBMâs Deep Blue faced off against Garry Kasparov1, the event resulted in more than <u>three billion impressions</u> around the world, and when IBMâs later creation Watson challenged the champions on Jeopardy, millions of viewers were glued to the proceedings.
-        <a href=""/a></p>
+        <p>
+          <a href="" target="_blank">Perhaps this is why we are so captivated by human vs. machine competitions, because the idea of being overcome by that which weâve created speaks to something very deep within our collective consciousness. When IBMâs Deep Blue faced off against Garry Kasparov1, the event resulted in more than <u>three billion impressions</u> around the world, and when IBMâs later creation Watson challenged the champions on Jeopardy, millions of viewers were glued to the proceedings.
+          </a>
+        </p>
       <h2><strong>DeepMindâs AlphaGo</strong></h2>
-        <p>Taking place right now, there is an event that, while not likely to scale the same media heights, may in fact have far greater implications when it comes to the future of âintelligentâ machines. On March 9, in Seoul, South Korea, a computing system know as AlphoGo (built by researchers at DeepMindâa Google Artificial Intelligence lab) began <u>a five-game match</u> against Lee Se-dol, one of the very best players in the world at the ancient game of Go.
-        <a href=""/a></p>
-          <p>Why is this so significant?</p>
-            <p>Here is how the DeepMind team explained it in their paper <u>Mastering the Game of Go with Deep Neural Networks and Tree Search</u>
-            <a href=""/a></p>  
+        <p>
+          <a href="" target="_blank">Place right now, there is an event that, while not NO NAME to scale the same media heights, may in fact have far greater implications when it comes to the future of intelligentâ machines. On March 9, in Seoul, South Korea, a computing system know as AlphoGo (built by researchers at DeepMindâa Google Artificial Intelligence lab) began <u>a five-game match</u> against Lee Se-dol, one of the very best players in the world at the ancient game of tGo.
+          </a>
+        </p>
+       <h2>Why is this so significant?</h2>
+         <p>
+           <a href="" target="_blank">Is how the DeepMind team explained it in their paper <u>Mastering the Game of Go with Deep Neural Networks and Tree Search</u>
+           </a>  
+          </p>
           <em>The game of Go has long been viewed as the most challenging of classic games for artificial intelligence due to its enormous search space and the difficulty of evaluating board positions and moves.
           </em>
         <p>Put another way, winning at Go is a kind of Holy Grail for those who strive to create machines that can âthinkâ on their own, because success at this uniquely complex game seems to require something more than just skill, knowledge, and experience. It requires intuition. Feel. Style. Characteristics we associate with humans, not with machines.
